<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/yellow"
    tools:context="com.demo.stuartabhi.nurisslife.Fragment.ContactUs">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="50dp"
            android:text="WHERE DO YOU FIND US?"
            android:layout_gravity="center|top"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/textview_new"
            android:text="@string/contct"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:textColor="#ffffff"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/textview_new"
            android:text="@string/contct1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:layout_marginRight="10dp"
            android:background="@drawable/textview_new"
            android:text="@string/contct2"/>
        
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/contct3"/>

    </LinearLayout>
</ScrollView>
